# layservice

./: .env  Conseguir_Rutas.ipynb  README.md  Summary.ipynb  Summary.py  docker-compose.yml  dockerfile  main.py  readme  requirements.txt
.github/workflows/: ghcr.yml  python-app.yml
application/: PersonalidadLay.py  Summary.py  main.py
chatservice/: archivos.txt  docker-compose.yml  dockerfile
chatservice/adapters/: streamlit_adapter.py
chatservice/application/: use_cases.py
chatservice/domain/: cost_calculator.py  document_loaders.py  memory.py  text_chunker.py  utils.py
chatservices/: .env.example  README.md  archivos.txt  docker-compose.yml  dockerfile  main.py  pyproject.toml  registro_preguntas.txt  requirements.txt
chatservices/adapters/: streamlit_adapter.py
chatservices/domain/: utils.py
domain/: utils.py
infrastructure/: main.py
my_chat_app/: .env  README.md  main.py
my_chat_app/adapters/: streamlit_adapter.py
my_chat_app/application/: use_cases.py
my_chat_app/domain/: chat_interaction.py  document.py  embeddings.py
my_chat_app/infrastructure/: chat_interface.py  custom_chatbot.py  database_repository.py  document_loader.py  embeddings.py  personality.py  repositories.py  summary.py
